using chrome api to access tab info

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,9 @@
   "action": {
     "default_popup": "dist/popup.html",
     "default_icon": "dist/icon.png"
-  }
+  },
+  "permissions": [
+    "activeTab",
+    "storage"
+  ]
 }
