--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.243",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
