feat: add delete item

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,11 @@
   "permissions": [
     "activeTab",
     "storage"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["https://www.anondraw.com/*", "https://anondraw.com/*"],
+      "js": ["dist/bundle.min.js"]
+    }
   ]
 }
